<resources>
    <string name="app_name">Equinox</string>
    <string name="SignTitle">Equinox</string>
    <string name="logInDetail">Oficina de Equidad y Genero</string>
    <string name="RegisterTitle">Registrate!</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Guest</string>
    <string name="nav_header_subtitle">guest@example.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="male">Hombre</string>
    <string name="female">Mujer</string>
    <string name="other">Otro</string>


    <string name="student">Estudiante</string>
    <string name="teacher">Docente</string>
    <string name="admin">Administrativo</string>
    <string name="otherOcu">Otro</string>

    <string-array name="spin_Gender">
        <item>@string/male</item>
        <item>@string/female</item>
        <item>@string/other</item>
    </string-array>

    <string-array name="spin_Ocupation">
        <item>@string/student</item>
        <item>@string/teacher</item>
        <item>@string/admin</item>
        <item>@string/otherOcu</item>
    </string-array>

    <string name="name_register">Nombre</string>
    <string name="email_register">Email</string>
    <string name="occupation_register">Ocupación</string>
    <string name="password_register">Contraseña</string>
    <string name="code_confirm">Código de verificación</string>
    <string name="text_confirm">Ingrese el código de verificación que ha sido enviado a tu correo electrónico</string>
    <string name="resend_confirm">Reenviar código</string>
    <string name="Close">Cerrar</string>
    <string name="RetryText">Porfavor conecte su dispositivo a internet y vuelva a intentar</string>
    <string name="Retry">Reintentar</string>
    <string name="Sorry">Lo sentimos</string>
    <string name="ErrorConfirm">Codigo de verificacion invalido</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_profile">Mi perfil</string>
    <string name="menu_lessons">Cursos</string>
    <string name="menu_exit">Salir</string>
    <string name="registerTitle">Registro</string>
    <string name="logInTitle">Iniciar sesión</string>
    <string name="confirmTitle">Confirmar cuenta</string>
    <string name="gender">Género</string>
    <string name="male_es">Masculino</string>
    <string name="female_es">Femenino</string>
    <string name="Continue">Continuar</string>
    <string name="Forgot_password_message">Ingrese su email para enviar un código de confirmación para recuperar su contraseña</string>
    <string name="Forgot_password">Olvidé la contraseña</string>
    <string name="Sign_up_length_rule">Entre 8 y 20 caracteres</string>
    <string name="Sign_up_lower_case_capital_letters_rule">Una letra mayúscula y una letra minúscula</string>
    <string name="Sign_up_number_rule">Un caracter numérico (0-9)</string>
    <string name="Sign_up_phone_number_rule">El número de teléfono debe contener 8 dígitos</string>
    <string name="Sign_up_character_rule">Un caracter especial !$#@_-.+</string>
    <string name="Forgot_password_success_message">Modificación Exitosa, Contraseña modificada correctamente. Por favor intente iniciar sesión nuevamente.</string>
</resources>
