<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
           android:id="@+id/topGroup">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_class_black_24dp"
            android:title="@string/menu_lessons" />

    </group>
    <group android:id="@+id/downGroup">

            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/menu_exit" />

    </group>


</menu>
