<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.quinox.mobile.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
    </fragment>

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.quinox.mobile.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_lessons"
        android:name="com.quinox.mobile.ui.lessons.LessonsFragment"
        android:label="@string/menu_lessons"
        tools:layout="@layout/fragment_lessons" />

    <fragment
        android:id="@+id/nav_exit"
        android:name="com.quinox.mobile.ui.exit.ExitFragment"
        android:label="@string/menu_exit"
        tools:layout="@layout/fragment_exit" />

    />
</navigation>