<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity">

    <TextView
        android:textAlignment="center"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:text="@string/Forgot_password_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView12" android:layout_marginTop="24dp"
        app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="30dp" app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="30dp"/>

    <ProgressBar
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar4" android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/forgot_username_layout" app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"/>
    <Button
        style="@style/Widget.AppCompat.Button.Colored"
        android:enabled="false"
        android:text="@string/Continue"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/forgot_next_btn" android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/progressBar4" app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="50dp" app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="50dp" app:layout_constraintHorizontal_bias="0.498"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/forgot_username_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12">

        <EditText
            android:id="@+id/forgot_username"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_register" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>