<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfirmAccActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lay_codeConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginStart"
        android:layout_marginEnd="@dimen/marginEnd"
        android:layout_marginTop="@dimen/marginTop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_textConfirm">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/code_confirm" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_resendConfirm"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Confirmar"
        android:enabled="false"
        android:layout_marginStart="@dimen/marginStart"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_marginEnd="@dimen/marginEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lay_codeConfirm" />

    <TextView
        android:id="@+id/txt_textConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_confirm"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_marginEnd="@dimen/marginEnd"
        android:layout_marginStart="@dimen/marginStart"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resend_confirm"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_marginEnd="@dimen/marginEnd"
        android:layout_marginStart="@dimen/marginStart"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_resendConfirm" />
</androidx.constraintlayout.widget.ConstraintLayout>