<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfirmForgotPasswordActivity">


    <LinearLayout
        android:layout_marginTop="20dp"
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_pass_ver_code_layout">

        <ImageView
            android:id="@+id/forgot_img1"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="right"
            android:layout_marginLeft="25dp"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/icon_close" />

        <TextView
            android:id="@+id/textView26"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:text="@string/Sign_up_lower_case_capital_letters_rule"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <ImageView
            android:id="@+id/forgot_img2"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="right"
            android:layout_marginLeft="25dp"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/icon_close"/>

        <TextView
            android:id="@+id/textView32"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/Sign_up_number_rule"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <ImageView
            android:id="@+id/forgot_img3"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="right"
            android:layout_marginLeft="25dp"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/icon_close"/>

        <TextView
            android:id="@+id/textView28"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_gravity="left"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/Sign_up_character_rule"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <ImageView
            android:id="@+id/forgot_img4"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="right"
            android:layout_marginLeft="25dp"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/icon_close"/>

        <TextView
            android:id="@+id/textView27"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/Sign_up_length_rule"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"/>
    </LinearLayout>
    <TextView
        android:textAlignment="center"
        android:textSize="16sp"
        android:text="Código de verificación"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView13" app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="30dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="30dp"
        android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        android:id="@+id/forgot_pass_ver_code_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp">

        <EditText
            android:hint="Código de verificación"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:id="@+id/editText2" android:layout_marginTop="24dp"

            />


    </com.google.android.material.textfield.TextInputLayout>




    <com.google.android.material.textfield.TextInputLayout
        app:passwordToggleEnabled="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4" app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="30dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="30dp"
        android:id="@+id/textInputLayout3">

        <EditText
            android:id="@+id/forgot_pass_edit_text"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Nueva Contraseña"/>
    </com.google.android.material.textfield.TextInputLayout>
    <ProgressBar
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar5" android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"/>
    <Button
        style="@style/Widget.AppCompat.Button.Colored"
        android:enabled="false"
        android:text="@string/Continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/forgot_change_btn" android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/progressBar5" app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="30dp" app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="30dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>